modified txt in aboutUs

--- a/views/aboutUs/quienesSomos.ejs
+++ b/views/aboutUs/quienesSomos.ejs
@@ -36,7 +36,7 @@
                 fletes, mudanzas, embalajes con personal altamente capacitado para el desarme y armado de muebles.
                 Embalamos con materiales de primera calidad para el mejor cuidado de sus muebles.
                 Realizamos mudanzas familiares,barrios cerrados,oficinas,comercio,empresas,bancos y desalojo judiciales.
-                FletesYA es una empresa comprometida con el cliente.
+                YoTeMudo es una empresa comprometida con el cliente.
 
                 Nuestra mayor aspiración es mejorar constantemente en calidad y servicio para dar una repuesta a
                 nuestros clientes de confianza.
@@ -44,7 +44,7 @@
 
                 Nuestro personal,con una amplisima experiencia,nos avala con soluciones eficaces.
                 Nuestra flota de vehículos adecuados a su mudanza.
-                FletesYa tiene una amplia experiencia en fletes y mudanzas los comentarios de nuestros clientes avalan
+                YoTeMudo tiene una amplia experiencia en fletes y mudanzas los comentarios de nuestros clientes avalan
                 nuestra calidad en el servicio.</p>
         </div>
 
