--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,21 +15,36 @@
                     <button class= "sub-boton">PRODUCTOS
                     </button>
                 </a>
-              </div>
-              <div class= "botones">
-                <a href="/users/login" class="boton3">
-                    <button class= "sub-boton">INICIAR SESION
-                    </button>
-                </a>
-              </div>
-              <div class= "botones">
-                <a href="/users/registro" class="boton4">
-                    <button class= "sub-boton">REGISTRATE
-                    </button>
-                </a>
-              </div>
-         </div>
-         <div class="telefono">
+              </div> 
+              <% if (locals.isLogged) { %>
+                <div class= "botones">
+                  <a href="/users/logout" class="boton5">
+                      <button class= "sub-boton">CERRAR SESION
+                      </button>
+                  </a>
+                </div>
+                <div class= "botones">
+                  <a href="/users/profileUser" class="boton6">
+                      <button class= "sub-boton">MI PERFIL
+                      </button>
+                  </a>
+                </div>
+              <% } else { %>
+                <div class= "botones">
+                  <a href="/users/login" class="boton3">
+                      <button class= "sub-boton">INICIAR SESION
+                      </button>
+                  </a>
+                </div>
+                <div class= "botones">
+                  <a href="/users/registro" class="boton4">
+                      <button class= "sub-boton">REGISTRATE
+                      </button>
+                  </a>
+                </div>
+              <% } %>
+        </div>
+        <div class="telefono">
             <img id= "whatsapp" width="30" height="30" src= '/img/whatsapp.png'alt= 'Imagen de whatsapp'></img>
-         </div>
+        </div>
     </header>
