se corrigio vista numero en pack y vista de edicion producto

--- a/views/products/edicionProducto.ejs
+++ b/views/products/edicionProducto.ejs
@@ -32,7 +32,7 @@
                     <form name="edicionProducto" method="POST" action="/products/edicionProducto/<%=productoEncontrado.id%>?_method=PUT" method="POST" enctype="multipart/form-data">
                         <p>
                             <label for="numeroDePack">N° de Pack</label>
-                            <input type="text" name="numeroDePack" required placeholder="<%=productoEncontrado.numeroDePack%>" value="<%=productoEncontrado.numeroDePack%>">
+                            <input type="text" name="numeroDePack" required placeholder="<%=productoEncontrado.numeroDePack%>" value="<%=productoEncontrado.numeroPack%>">
                         </p>
                         <p>
                             <label for="radio">Radio en Km</label>
