--- a/views/products/producto.ejs
+++ b/views/products/producto.ejs
@@ -38,7 +38,7 @@
           
               <img src="/img/camiones/<%= products[i].imagen %>" alt="Camion Mudanza 1" class="imagenCamion">
 
-              <h3>Pack Nro.<%= products[i].numeroDePack %></h3>
+              <h3>Pack Nro.<%= products[i].numeroPack %></h3>
               <span><%= products[i].radio %>km </span> <br>
               <span><%= products[i].superficie %> Mts2 </span> <br>
               <span>$<%= products[i].precio %> </span> <br>
