modificacion de usuario - falta put

--- a/views/users/profileUser.ejs
+++ b/views/users/profileUser.ejs
@@ -77,7 +77,7 @@
                             <button type="submit">CONFIRMAR</button>
                         </div>
                         <div class="profile_center">
-                            <button type="submit">ACTUALIZAR</button>
+                            <button type="submit"> <a href="registroActualizar/<%=user.id %>" >ACTUALIZAR</a></button>
                         </div>
                         
                     </div>
