--- a/views/products/producto.ejs
+++ b/views/products/producto.ejs
@@ -39,10 +39,11 @@
               <img src="/img/camiones/<%= products[i].imagen %>" alt="Camion Mudanza 1" class="imagenCamion">
 
               <h3>Pack Nro.<%= products[i].numeroPack %></h3>
-              <span><%= products[i].radio %>km </span> <br>
-              <span><%= products[i].superficie %> Mts2 </span> <br>
-              <span>$<%= products[i].precio %> </span> <br>
-              <span>Medidas </span> <br>
+              <span>radio: <%= products[i].radio %>km </span> <br>
+              <span>superficie: <%= products[i].superficie %> Mts2 </span> <br>
+              <br>
+              <span>valor: $ <%= products[i].precio %> </span> <br>
+              <!-- <span>Medidas </span> <br> -->
               
                 <% if (locals.isLogged && locals.userLogged.userAdmin == 1) { %>
                   <div class="carrito-tu-pack"> 
