corregido tema img y pass user

--- a/views/products/edicionProducto.ejs
+++ b/views/products/edicionProducto.ejs
@@ -61,8 +61,8 @@
                 <div class="formulario_de_info">
                     <div class="packUnitario">
                         <img src="/img/camiones/<%=productoEncontrado.imagen%>" alt="Camion Mudanza 1" class="imagenCamion">
-                        <h3>Pack N°<%=productoEncontrado.numeroDePack%></h3>
-                        <span>Radio <%=productoEncontrado.radio%>km </span> <br>
+                        <h3>Pack N° <%=productoEncontrado.numeroPack%></h3>
+                        <span>Radio <%=productoEncontrado.radio%> km </span> <br>
                         <span><%=productoEncontrado.superficie%> Mts2 </span> <br>
                         <span>$<%=productoEncontrado.precio%></span> <br>
                         <span>Medidas </span> <br>
