--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -7,11 +7,12 @@
         <meta name="viewport" content= "width= device-width , initial-scale=1">
         <link rel="stylesheet" href="/css/indexNormalize.css">
         <link rel="stylesheet" href="/css/loginStyles.css" />
+        <script src="/scripts/js_LoginFront.js"></script>
     </head>
     <body class="background">
         <%- include('../partials/header') %> 
             <main>
-                <form Action='login' method='POST'>
+                <form Action='login' method='POST' class="front-js">
                     <div class="centrado">
                     
                         <div class="icono_login"> 
@@ -19,7 +20,7 @@
                         </div>
                         <h2 class="titulo_Ingreso"> INICIAR SESION </h2>
                         <p> <label for='usuario'> 
-                                <input class= "formularios" type="text" name="usuario" id="usuario" placeholder="Usuario" 
+                                <input class= "formularios nombre" type="text" name="usuario" id="usuario" placeholder="Usuario" 
                                     size="35" maxlength="30" autofocus >
                                     <% if (locals.errors && errors.usuario) { %>
                                         <div class="classeError">
@@ -28,20 +29,24 @@
                                     <% } %>
                             </label> 
                         </p>
+                        <!-- <div class="ul_error_usuario">
+                        </div> -->
                         <p> <label for='claveUsuario'> 
-                                <input class= "formularios"type="password" name="claveUsuario" id="claveUsuario"
+                                <input class= "formularios clave"type="password" name="claveUsuario" id="claveUsuario"
                                     placeholder="Contraseña" size="35" maxlength="30" > 
                                 </input>
                             </label> 
                         </p>
                         <!--<input type="submit" value="Reestablecer contraseña / Registrarse" style="vertical-align: middle"> -->
-                        
+                        <div class="ul_errores">
+                        </div>
                         <div>
                             <button class="carrito-volver" type="submit">
                                     <img src="/img/send.svg" alt="Icono de Ingreso" width="20" height="20" style="vertical-align: middle"> 
                                     CONFIRMAR 
                             </button>
                         </div>
+
                         <br>
                         <div class="otros-accesos">
                             <a href='#'>Olvide mi contraseña</a>  |  
