--- a/public/css/carga-edicion.css
+++ b/public/css/carga-edicion.css
@@ -89,6 +89,7 @@ body {
     box-shadow: 0 0 20px 0 rgba(255,255,255, .3);
     background: rgba(0,0,0,.4);
     padding: 1em;
+    color:antiquewhite;
 }
 .formulario_de_carga_edicion h1 {
     text-align: center;
