revision de validaciones

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -26,7 +26,7 @@
                         <h2 class="titulo_Ingreso"> INICIAR SESION </h2>
                         <p> <label for='usuario'> 
                                 <input required
-                                    class= "formularios nombre" 
+                                    class= "formularios usuario" 
                                     type="text" 
                                     name="usuario" 
                                     id="usuario" 
