--- a/views/users/registro.ejs
+++ b/views/users/registro.ejs
@@ -44,7 +44,7 @@
                         <div class="datos_de_contacto">
                             <div class="cajaDato">
                                 <label for="nombre">NOMBRE </label>
-                                <input required
+                                <input 
                                     class="nombre"
                                     type="text" 
                                     name="nombre" 
@@ -59,7 +59,7 @@
                             </div>                           
                             <div class="cajaDato">
                                 <label for="apellido">APELLIDO</label>
-                                <input required
+                                <input 
                                     class="apellido"
                                     type="text" 
                                     name="apellido" 
@@ -74,7 +74,7 @@
                             </div>
                             <div class="cajaDato">
                                 <label for="usuario">USUARIO</label>
-                                <input required
+                                <input 
                                     class="usuario"
                                     type="text" 
                                     name="usuario" 
@@ -90,7 +90,7 @@
                             </div>
                             <div class="cajaDato">
                                 <label for="email">E-MAIL</label> <br>
-                                <input required
+                                <input 
                                    class="email"
                                     type="text" 
                                     name="email" 
@@ -155,7 +155,7 @@
 
                             <div class="cajaDato">
                                 <label for="claveUsuario">CONTRASEÑA</label>
-                                <input required
+                                <input 
                                     class="password"
                                     type="password"  
                                     name="claveUsuario" 
