--- a/views/products/cargaProducto.ejs
+++ b/views/products/cargaProducto.ejs
@@ -15,10 +15,6 @@
     <!-- Enlace con CCS-->
     <link rel="stylesheet" href="/css/indexNormalize.css">
     <link rel="stylesheet" href="/css/carga-edicion.css">
-
-    <!-- Enlace con js en el Front-->
-    <script src="/scripts/js_CargaProdFront.js"></script>
-
 </head>
 
     <body>
@@ -36,61 +32,27 @@
             <div class="formulario_entero">
                 <div class="formulario_de_carga_edicion">
                     <h1> Datos del Servicio </h1>
-                    <form name="cargaProducto" method="POST" action="cargaProducto" enctype="multipart/form-data" class="cargaFront-js">
+                    <form name="cargaProducto" method="POST" action="cargaProducto" enctype="multipart/form-data">
                         <p>
-                            <label for="numeros">N° de Pack
-                            <input required
-                                class='numeroPack'
-                                type="text" 
-                                name="numeroDePack"
-                                id='numeros' >
-                            </label>                            
+                            <label for="numeros">N° de Pack</label>
+                            <input type="text" name="numeroDePack" required>
                         </p>
                         <p>
-                            <label for="texto">Radio en Km
-                            <input required
-                                class='km'
-                                type="text" 
-                                name="radio"
-                                id='texto'>
-                            </label>
+                            <label for="texto">Radio en Km</label>
+                            <input type="text" name="radio">
                         </p>
                         <p>
-                            <label for="precio">Precio
-                            <input required
-                                class='precio'
-                                type="text" 
-                                name="precio"
-                                id='precio'>
-                            </label>
+                            <label for="precio">Costo</label>
+                            <input type="text" name="precio">
                         </p>
                         <p>
-                            <label for="medidas">Medidas
-                            <input required
-                                class='medida'
-                                type="texto" 
-                                name="medidas"
-                                id='medidas'>
-                            </label>
+                            <label for="medidas">Medidas</label>
+                            <input type="texto" name="medidas">
                         </p>
-                        <p>
-                            <label for="imagenProducto" class="form-label">Imagen
-						    <input 
-                                class= "imagenProducto"
-                                type="file" 
-                                name="imagenProducto" 
-                                id="imagenProducto">
-                            </label>
-                        </p>
-
-                       
-                                <div class="erroresEdit">
-                                    <ul></ul>
-                                </div>
-                            
+                        <label for="imagenProducto" class="form-label">Imagen</label>
+						<input type="file" name="imagenProducto" />
                             <button type="submit">ENVIAR</button>
-                      
-
+                        </p>
                     </form>
                 </div>
                 <div class="formulario_de_info">
@@ -100,7 +62,7 @@
                         <span>Radio ?? km </span> <br>
                         <span>?? Mts2 </span> <br>
                         <span>Precio </span> <br>
-                        <!-- <span>Medidas </span> <br> -->
+                        <span>Medidas </span> <br>
                         <span><a href="/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
                     </div>
                 </div>
