--- a/views/products/carrito.ejs
+++ b/views/products/carrito.ejs
@@ -1,96 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Carrito</title>
     <link rel="stylesheet" href="/css/carritoNormalize.css">
-    <link rel="stylesheet" href="/css/fuentes.css">
     <link rel="stylesheet" href="/css/carritoStyles.css">
+
 </head>
 
 <body>
-    <%- include('../partials/header') %> 
+    <%- include('../partials/header') %>
     <main>
         <div class="carritoContenedor03">
             <div class="carrito-tu-pack">
-                
-                    <button class="carrito-pack">Este es tu pack
-                        <span class="icon"><img width="25" height="25" src='/img/hecho-garrapata.png'
-                                alt='Imagen de tilde'></img></span>
-                    </button>
-                                <img src="/img/camiones/<%=packBuscado.imagen%>" alt="Camion Mudanza 1" class="imagenCamion">
-                    <h3>PACK Nro. <%=packBuscado.numeroPack%></h3>
-                    <span><b>Precio: $ <%=packBuscado.precio%></b></span> <br>
-                    <span>Radio: <%=packBuscado.radio%> km </span> <br>
-                    <span> Para: <%=packBuscado.superficie%> Mts2 </span> <br>
-                    
-                    <!-- <span>Medidas </span> <br> -->
-                    <!-- <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>   -->
-        
+
+                <button class="carrito-pack">Este es tu pack
+                    <span class="icon"><img width="25" height="25" src='/img/hecho-garrapata.png'
+                            alt='Imagen de tilde'></img></span>
+                </button>
+                <img src="/img/camiones/<%=packBuscado.imagen%>" alt="Camion Mudanza 1" class="imagenCamion">
+                <h3>PACK Nro. <%=packBuscado.numeroPack%>
+                </h3>
+                <span><b>Precio: $ <%=packBuscado.precio%></b></span> <br>
+                <span>Radio: <%=packBuscado.radio%> km </span> <br>
+                <span> Para: <%=packBuscado.superficie%> Mts2 </span> <br>
             </div>
             <div class="carrito-servicios">
                 <h4 class="carrito-serad">Servicios Adicionales</h4>
                 <ul type=none>
-                    <li><input type="checkbox"><label class="carrito-tipo Traslado"> Traslado en Día Feriado </label> <br></li>
-                    <li><input type="checkbox"><label class="carrito-tipo Asistente"> Asistente Adicional </label></li>
-                    <li><input type="checkbox"><label class="carrito-tipo Embalaje"> Servicio de Embalaje </label></li>
-                    <li><input type="checkbox"><label class="carrito-tipo Cajas"> Variedad en Cajas</label></li>
-                    <li><input type="checkbox"><label class="carrito-tipo Cintas"> Cintas adhesivas </label></li>
-                    <li><input type="checkbox"><label class="carrito-tipo Espuma"> Goma espuma </label></li>
-                    <li><input type="checkbox"><label class="carrito-tipo DepositoTemp"> Depósito Temporal </label></li>
-                    <li><input type="checkbox"><label class="carrito-tipo DepositoPerm"> Depósito Permantente </label></li>
+
+                    <li><input type="checkbox" class="traslado"><label class="carrito-tipo"> Traslado en Día Feriado
+                        </label> <br> </li>
+                    <li><input type="checkbox" class="asistente"><label class="carrito-tipo asistente"> Asistente
+                            Adicional
+                        </label>
+                    </li>
+                    <li><input type="checkbox" class="embalaje"><label class="carrito-tipo embalaje"> Servicio de
+                            Embalaje </label>
+                    </li>
+                    <li><input type="checkbox" class="cajas"><label class="carrito-tipo cajas"> Variedad en
+                            Cajas</label></li>
+                    <li><input type="checkbox" class="cintas"><label class="carrito-tipo cintas"> Cintas adhesivas
+                        </label></li>
+                    <li><input type="checkbox" class="espuma"><label class="carrito-tipo espuma"> Goma espuma
+                        </label></li>
+                    <li><input type="checkbox" class="depoT"><label class="carrito-tipo depositoTemp"> Depósito
+                            Temporal </label>
+                    </li>
+                    <li><input type="checkbox" class="depoP"><label class="carrito-tipo depositoPerm"> Depósito
+                            Permantente
+                        </label></li>
+
                 </ul>
             </div>
-
-            <!-- <div class="carrito-adicionales">
-                <h3 class="carrito-invitar"> Te invitamos a Seleccionar tus servicios adicionales </h3>
-                <br>
-                <img id="carrito-lapiz" width="100" height="100" src="/img/bloc.png" alt='Imagen de bloc'></img>
-            </div> -->
-
             <div class="carrito-botones">
                 <br>
                 <br>
-                 <div class="costo">
-                    <h3>Precio Total con Servicios: $23600</h3>
-                    <!-- <a href="#" class="detalle">Mis servicios</a> -->
+                <div class="costo">
+                    <h3>Precio sin Servicios adicionales: <%=packBuscado.precio%>
+                    </h3>
+
                 </div>
+                <!-- BOTON CON IF -->
                 <% if (locals.isLogged) { %>
-                <button class="carrito-ok pack"> <a href="/products/carritoConfirm/<%=packBuscado.id%>">OK quiero PACK
-                    <span class="icon"><img width="25" height="25" src="/img/hecho-garrapata.png"
-                            alt='Imagen de tilde'></img></span></a>
+                <button class="carrito-ok pack buttonValidar"> <a href="/products/carritoConfirm/<%=packBuscado.id%>">
+                        OK
+                        quiero PACK
+                        <span class="icon"><img width="25" height="25" src="/img/hecho-garrapata.png"
+                                alt='Imagen de tilde'></img></span></a>
                 </button>
                 <% } else { %>
-    <br>               <h5>Por favor <a href="/users/login">Iniciar Sesion</a> para poder continuar en su carrito de compras</h5>
-                 <% } %>
+                <br>
+                <h5>Por favor <a href="/users/login">Iniciar Sesion</a> para poder continuar en su carrito
+                    de compras</h5>
+                <% } %>
                 <button class="carrito-volver">
                     <a href="/products/producto">
-                    VOLVER
-                    <span class="icon"><img width="25" height="25" src='/img/arriba.png'
-                            alt='Imagen de flecha hacia arriba'></img></span></a>
+                        VOLVER
+                        <span class="icon"><img width="25" height="25" src='/img/arriba.png'
+                                alt='Imagen de flecha hacia arriba'></img></span></a>
                 </button>
-
-                <!-- <div class="carrito">
-                    <img width="35" height="35" src='/img/carrito-de-compras.png' alt='Imagen de ahopping cart'></img>
-                </div> -->
-
-               
             </div>
-
         </div>
     </main>
 
-    <%- include('../partials/footer') %> 
-    <!-- <footer class="footer">
-        <div class="redesSocialesFooter">
-          
-          <div class ="rrss"><img src="/img/facebook.png" class="logoFacebook"/></div>
-          <div class="rrss"><img src="/img/twitter.png" class="logoTwitter"/></div>
-          <div class="rrss"><img src="/img/linkedin.png" class="logoFacebook"/></div>  
-        </div>  
-      </footer> -->
-      <script src="/scripts/carritoValues.js"></script>
+    <%- include('../partials/footer') %>
+    <script src="/scripts/js_CarritoValues.js"></script>
 </body>
 
 </html>
