--- a/public/css/carga-edicion.css
+++ b/public/css/carga-edicion.css
@@ -89,7 +89,6 @@ body {
     box-shadow: 0 0 20px 0 rgba(255,255,255, .3);
     background: rgba(0,0,0,.4);
     padding: 1em;
-    color:antiquewhite;
 }
 .formulario_de_carga_edicion h1 {
     text-align: center;
@@ -151,6 +150,10 @@ body {
 .formulario_de_carga_edicion form button:focus {
 background: #d63031;
  color: #fff; 
+}
+.erroresEdit {
+    color:blanchedalmond;
+    font-weight: bold;
 }   
 
 .packUnitario {
@@ -173,17 +176,6 @@ background: #d63031;
     width: 35px;
     height: 30px;
 } 
-
-
-/* ----- -----  Estilos para Validacion ----- ----- */
-
-.erroresEdit{
-    margin-top: 2px;
-    color:red;
-    font-style: italic;
-}
-/* ----- -----  FIN de Estilos para Validacion ----- ----- */
-
 
 /* new footer */
 .mainFooter{
@@ -273,7 +265,7 @@ padding: 2em;
       text-align: center;
       justify-content: center;
       align-items: center;
-  } 
+    } 
     .sectionThreeFooter{
    justify-self: center;
    
@@ -287,6 +279,6 @@ padding: 2em;
    .mainFooter img {
     width: 8vw;
     height: 8vw;
-}
-  /* termina el footer */
+    }
+ 
 }
