vuelvo al origi

--- a/public/css/carga-edicion.css
+++ b/public/css/carga-edicion.css
@@ -150,10 +150,6 @@ body {
 .formulario_de_carga_edicion form button:focus {
 background: #d63031;
  color: #fff; 
-}
-.erroresEdit {
-    color:blanchedalmond;
-    font-weight: bold;
 }   
 
 .packUnitario {
@@ -265,7 +261,7 @@ padding: 2em;
       text-align: center;
       justify-content: center;
       align-items: center;
-    } 
+  } 
     .sectionThreeFooter{
    justify-self: center;
    
@@ -279,6 +275,6 @@ padding: 2em;
    .mainFooter img {
     width: 8vw;
     height: 8vw;
-    }
- 
+}
+  /* termina el footer */
 }
