--- a/views/aboutUs/quienesSomos.ejs
+++ b/views/aboutUs/quienesSomos.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/profileStyles.css">
     <link rel="stylesheet" href="/css/quienesSomos.css">
     <link rel="stylesheet" href="/css/carritoNormalize.css">
+    <link rel="stylesheet" href="/css/fuentes.css">
     <link rel="stylesheet" href="/css/carritoStyles.css">
 
     <!--    Font awesome  -->
@@ -23,7 +24,7 @@
 <body>
 
     <%- include('../partials/header') %>
-
+   
 
 
         <div class="imagenUno">
@@ -50,8 +51,8 @@
         <div class="imagenDos">
             <img src="/img/quienessomosHistoria.jpg">
         </div>
-        </div>
-        <%- include('../partials/footer') %>
+    </div>
+    <%- include('../partials/footer') %>
 
 </body>
 
